--- a/templates/includes/cart_button.html
+++ b/templates/includes/cart_button.html
@@ -30,7 +30,7 @@
                                 {% include 'carts/includes/include_carts.html' %}
                                 <!-- Закончилась разметка корзины -->
                             </div>
-                            <a class="btn btn-dark" href="orders/create_order.html">
+                            <a class="btn btn-dark {% if not carts %}disabled{% endif %}" href="orders/create_order.html">
                                 Оформить заказ
                             </a>
                         </div>
