--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -81,9 +81,11 @@
                                         {% include 'carts/includes/include_carts.html' %}
                                             <!-- Закончилась разметка корзины -->
                                         </div>
-                                        <a class="btn btn-dark" href="../orders/create_order.html">
+
+                                        <a class="btn btn-dark {% if not carts %}disabled{% endif %}" href="../orders/create_order.html">
                                             Оформить заказ
                                         </a>
+
                                     </div>
                                 </div>
                                 <!-- Оформленные заказы -->
