--- a/carts/templates/carts/includes/include_carts.html
+++ b/carts/templates/carts/includes/include_carts.html
@@ -14,16 +14,16 @@
                                                             <span class="input-group-btn">
                                                                 <button type="button"
                                                                         class="btn btn-dark btn-sm decrement"
-                                                                        data-cart-id=""
-                                                                        data-cart-change-url="">-</button>
+                                                                        data-cart-id="{{ cart.id }}"
+                                                                        data-cart-change-url="{% url 'carts:cart_change' %}">{% csrf_token %}-</button>
                                                             </span>
                             <input type="text" class="form-control number" value="{{ cart.quantity }}"
                                    readonly>
                             <span class="input-group-btn">
                                                                 <button type="button"
                                                                         class="btn btn-dark btn-sm increment"
-                                                                        data-cart-id=""
-                                                                        data-cart-change-url="">+</button>
+                                                                        data-cart-id="{{ cart.id }}"
+                                                                        data-cart-change-url="{% url 'carts:cart_change' %}">{% csrf_token %}+</button>
                                                             </span>
                         </div>
                     </div>
@@ -43,10 +43,10 @@
             </li>
         </ul>
     {% endfor %}
-        </div>
-        <div class="card mb-3 shadow-lg">
-        <div class="card-footer">
-            <p class="float-left">Итого <strong>{{ carts.total_amount }}</strong> товар(а) на сумму</p>
-            <h4 class="float-left"><strong>{{ carts.total_price }} $</strong></h4>
-        </div>
+</div>
+<div class="card mb-3 shadow-lg">
+    <div class="card-footer">
+        <p class="float-left">Итого <strong>{{ carts.total_amount }}</strong> товар(а) на сумму</p>
+        <h4 class="float-left"><strong>{{ carts.total_price }} $</strong></h4>
     </div>
+</div>
