--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -19,7 +19,9 @@
                     <h2 class="text-center mb-4">Авторизация</h2>
                     <form action="{% url 'user:login' %}" method="POST">
                         {% csrf_token %}
-                        {#                        <div class="form-error" style="width: 400px">{{ form.non_field_errors }}</div>#}
+                        {% if request.GET.next %}
+                            <input type="hidden" name="next" value={{ request.GET.next }}>
+                        {% endif %}
                         <div class="mb-3">
                             <label for="id_username" class="form-label">Имя пользователя или Email</label>
                             <input type="text" class="form-control" name="username" id="id_username"
