--- a/users/templates/users/user_cart.html
+++ b/users/templates/users/user_cart.html
@@ -6,6 +6,7 @@
 {% user_carts request as carts %}
 
 
+
     <!-- Контент на странице -->
                     <div class="row">
                         <div class="container mt-5">
@@ -17,7 +18,7 @@
                                         {% include 'carts/includes/include_carts.html' %}
                                         <!-- Закончилась разметка корзины -->
                                     </div>
-                                    <a class="btn btn-dark {% if not carts %}disabled{% endif %}" href="../orders/create_order.html">
+                                    <a class="btn btn-dark {% if not carts %}disabled{% endif %}" href="{% url 'orders:create_order' %}">
                                         Оформить заказ
                                     </a>
                                 </div>
