--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -82,9 +82,7 @@
                                             <!-- Закончилась разметка корзины -->
                                         </div>
 
-                                        <a class="btn btn-dark {% if not carts %}disabled{% endif %}" href="{% url 'orders:create_order' %}">
-                                            Оформить заказ
-                                        </a>
+
 
                                     </div>
                                 </div>
@@ -93,15 +91,17 @@
                                     <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
                                         <h3 class="text-center mb-4">Мои заказы</h3>
                                         <!-- Разметка заказов -->
+
                                         <div class="container">
                                             <div class="accordion" id="accordionExample">
+                                                {% for ord in orders %}
                                                 <div class="accordion-item">
-                                                    <h2 class="accordion-header" id="heading1">
-                                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                                                            Заказ № 256 - 09 сентября 2023 9:04 | Статус:<strong class="mx-2"> В обработке</strong>
+                                                    <h2 class="accordion-header" id="heading{{ ord.id }}">
+                                                        <button class="accordion-button {% if ord != orders.0 %}collapsed{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ ord.id }}" aria-expanded="false" aria-controls="collapse{{ ord.id }}">
+                                                           Заказ № {{ ord.id }} от {{ ord.created_timestamp }} | Статус: <strong class="mx-2">{{ ord.get_status_display }}</strong>
                                                         </button>
                                                     </h2>
-                                                    <div id="collapse1" class="accordion-collapse collapse show" aria-labelledby="heading1" data-bs-parent="#accordionExample">
+                                                    <div id="collapse{{ ord.id }}" class="accordion-collapse collapse {% if ord == orders.0 %}show{% endif %}" aria-labelledby="heading{{ ord.id }}" data-bs-parent="#accordionExample">
                                                         <div class="accordion-body">
                                                             <table class="table table-dark table-hover">
                                                                 <thead>
@@ -113,53 +113,26 @@
                                                                     </tr>
                                                                 </thead>
                                                                 <tbody>
+                                                                {% for item in ord.orderitem_set.all %}
                                                                     <tr>
-                                                                        <td><a class="text-white" href="#">Комплект стол и три стула</a></td>
-                                                                        <td>1</td>
-                                                                        <td>255.00 $</td>
-                                                                        <td>255.00 $</td>
+                                                                        <td><a class="text-white" href="{{item.product.get_absolute_url}}"> {{ item.name }}</a></td>
+                                                                        <td>{{ item.quantity }}</td>
+                                                                        <td>{{ item.price }} $</td>
+                                                                        <td>{{ item.products_price }} $</td>
 
                                                                     </tr>
+                                                                    {% endfor %}
                                                                 </tbody>
                                                             </table>
                                                             <div class="d-flex justify-content-between">
                                                                 <p><strong>Итого:</strong></p>
-                                                                <p><strong>255.00 $</strong></p>
+                                                                <p><strong>{{ ord.orderitem_set.total_price }} $</strong></p>
 
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="accordion-item">
-                                                    <h2 class="accordion-header" id="heading2">
-                                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                                                            Заказ № 248 - 01 августа 2023 11:28 | Статус: <strong>Получен</strong>
-                                                        </button>
-                                                    </h2>
-                                                    <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
-                                                        <div class="accordion-body">
-                                                            <table class="table table-dark table-hover">
-                                                                <thead>
-                                                                    <tr>
-                                                                        <th>Товар</th>
-                                                                        <th>Количество</th>
-                                                                        <th>Цена</th>
-                                                                        <th>Общая стоимость</th>
-                                                                    </tr>
-                                                                </thead>
-                                                                <tbody>
-                                                                    <tr>
-                                                                        <td><a class="text-white" href="#">Стул офисный</a></td>
-                                                                        <td>2</td>
-                                                                        <td>30.00 $</td>
-                                                                        <td>60.00 $</td>
-
-                                                                    </tr>
-                                                                </tbody>
-                                                            </table>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                                {% endfor %}
                                             </div>
                                         </div>
                                         <!-- Закончилась разметка заказов -->
