--- a/carts/templates/carts/includes/include_carts.html
+++ b/carts/templates/carts/includes/include_carts.html
@@ -4,7 +4,8 @@
 <div class="card mb-3 text-bg-light shadow-lg">
     {% for cart in carts %}
         <div class="card-header">
-            <h5 class="card-title">{{ cart.product.name }}</h5>
+            <a class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+               href="{{ cart.product.get_absolute_url }}"><h5 class="card-title">{{ cart.product.name }}</h5></a>
         </div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item">
@@ -51,7 +52,7 @@
     </div>
 </div>
 {% if not order %}
-<a class="btn btn-dark {% if not carts %}disabled{% endif %}" href="{% url "orders:create_order" %}">
-                                Оформить заказ
-                            </a>
+    <a class="btn btn-dark {% if not carts %}disabled{% endif %}" href="{% url "orders:create_order" %}">
+        Оформить заказ
+    </a>
 {% endif %}
