--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -18,7 +18,7 @@
             </button>
 
 
-            <form action="{% url 'catalog:catalog' cat_slug %}" method="get" class="dropdown-menu bg-dark"
+            <form action="" method="get" class="dropdown-menu bg-dark"
                   data-bs-theme="dark">
 
                 <div class="form-check text-white mx-3">
@@ -94,14 +94,14 @@
 
 {% block footer %}
     <!-- Пагинация -->
-    {% if goods.has_other_pages %}
+    {% if page_obj.has_other_pages %}
     <div class="mt-auto">
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
                 <div class="custom-shadow d-flex rounded">
-                    {% if goods.has_previous %}
+                    {% if page_obj.has_previous %}
                         <li class="page-item">
-                            <a class="page-link" href="?{% change_param page=goods.previous_page_number %}">Назад</a>
+                            <a class="page-link" href="?{% change_param page=page_obj.previous_page_number %}">Назад</a>
                         </li>
                     {% else %}
                         <li class="page-item disabled">
@@ -109,19 +109,19 @@
                         </li>
                     {% endif %}
 
-                    {% for page in goods.paginator.page_range %}
-                        {% if page >= goods.number|add:-2  and page <= goods.number|add:2 %}
-                            <li class="page-item {% if goods.number == page %}active{% endif %}"><a class="page-link"
+                    {% for page in page_obj.paginator.page_range %}
+                        {% if page >= page_obj.number|add:-2  and page <= page_obj.number|add:2 %}
+                            <li class="page-item {% if page_obj.number == page %}active{% endif %}"><a class="page-link"
                                                                                                     href="?{% change_param page=page %}">{{ page }}</a>
                             </li>
                         {% endif %}
 
                     {% endfor %}
 
-                    {% if goods.has_next %}
+                    {% if page_obj.has_next %}
                         <li class="page-item">
                             <a class="page-link"
-                               href="?{% change_param page=goods.next_page_number %}">Вперед</a>
+                               href="?{% change_param page=page_obj.next_page_number %}">Вперед</a>
                         </li>
                     {% else %}
                         <li class="page-item disabled">
