--- a/goods/templates/goods/search.html
+++ b/goods/templates/goods/search.html
@@ -18,7 +18,7 @@
             </button>
 
 
-            <form action="{% url 'catalog:search' %}" method="get" class="dropdown-menu bg-dark"
+            <form action="" method="get" class="dropdown-menu bg-dark"
                       data-bs-theme="dark">
 
             <div class="form-check text-white mx-3">
@@ -84,10 +84,14 @@
                             {% else %}
                                 <p><strong>{{ good.real_price }} $</strong></p>
                             {% endif %}
-                            <a href="{% url 'carts:cart_add' good.slug %}" class="btn add-to-cart">
+
+
+                            <a href="{% url 'carts:cart_add' %}" class="btn add-to-cart">
+                                {% csrf_token %}
                                 <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
                                      width="32" height="32">
                             </a>
+
                         </div>
                     </div>
                 </div>
