--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -44,7 +44,7 @@
                         {#                                              {% endfor %}#}
 
                         <button type="submit" class="btn btn-dark btn-block">Войти</button>
-                        {{ captcha }}
+{#                        {{ captcha }}#}
                         {#                        <div>#}
                         {#                        {% if form.errors %}#}
                         {#                            {% for error in form.errors.as_data.values %}#}
@@ -61,17 +61,17 @@
                     <hr>
                     <div class="text-center">
                         <p>Или авторизуйтесь через:</p>
-                        <a href="#" class="btn btn-dark">
+                        <a href="#" class="btn btn-dark disabled" aria-disabled="true">
                             <img class="mx-1" src="{% static 'deps/icons/google.svg' %}" alt="Catalog Icon" width="16"
-                                 height="16">
+                                 height="16" >
                             Google
                         </a>
-                        <a href="#" class="btn btn-dark">
+                        <a href="#" class="btn btn-dark disabled" aria-disabled="true">
                             <img class="mx-1" src="{% static 'deps/icons/facebook.svg' %}" alt="Catalog Icon" width="16"
                                  height="16">
                             Facebook
                         </a>
-                        <a href="#" class="btn btn-dark">
+                        <a href="{% url 'social:begin' 'github' %}" class="btn btn-dark">
                             <img class="mx-1" src="{% static 'deps/icons/github.svg' %}" alt="Catalog Icon" width="16"
                                  height="16">
                             GitHub
