--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -56,7 +56,8 @@
                         {#                        </div>#}
                     </form>
                     <div class="mt-3">
-                        <a href="#">Забыли пароль?</a> | <a href="{% url 'user:registration' %}">Создать аккаунт</a>
+                        <a href="{% url 'users:password_reset' %}">Восстановить пароль по e-mail</a> | <a
+                            href="{% url 'user:registration' %}">Создать аккаунт</a>
                     </div>
                     <hr>
                     <div class="text-center">
